adds jquery to files

--- a/test/service-and-support.html
+++ b/test/service-and-support.html
@@ -7,7 +7,7 @@
     <title>Service &amp; Support | Biolin Scientific</title>
     
     
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="/hs/hsstatic/jquery-libs/static-1.4/jquery/jquery-1.11.2.js"></script>
 <script>hsjQuery = window['jQuery'];</script>
     <meta property="og:description" content="Biolin Scientific Service and Support. Find it here.">
