adds jquery to file

--- a/test/measurements.html
+++ b/test/measurements.html
@@ -50,7 +50,7 @@ _hsq.push(['addPrivacyConsentListener', function(consent) { if (consent.allowed)
 
 
 
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="apple-touch-icon" sizes="152x152" href="hubfs/Assets/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="hubfs/Assets/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="hubfs/Assets/favicons/favicon-16x16.png">
