adds script to quicklink

--- a/test/index.html
+++ b/test/index.html
@@ -1208,4 +1208,11 @@ var hsVars = {
 
 
 <!-- end coded_template: id:5282739804 path:generated_layouts/5282739800.html -->
+<!-- Quicklink test script -->
+
+<script src="./quicklink.umd.js"></script>
+<script>
+  quicklink.listen();
+      // quicklink({ priority: 'high' });
+</script>
 </body></html>
