--- a/test/measurements.html
+++ b/test/measurements.html
@@ -1387,4 +1387,12 @@ var hsVars = {
 
 
 <!-- end coded_template: id:5304632819 path:generated_layouts/5304516073.html -->
+
+<!-- Quicklink test script -->
+
+<script src=".quicklink.umd.js"></script>
+<script>
+  quicklink.listen();
+      // quicklink({ priority: 'high' });
+</script>
 </body></html>
