--- a/test/service-and-support.html
+++ b/test/service-and-support.html
@@ -2703,4 +2703,12 @@ var hsVars = {
 
 
 <!-- end coded_template: id:5311548848 path:generated_layouts/5311548844.html -->
+
+<!-- Quicklink test script -->
+
+<script src="./quicklink.umd.js"></script>
+<script>
+  quicklink.listen();
+      // quicklink({ priority: 'high' });
+</script>
 </body></html>
